<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_the_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="url_to_the_course" translatable="false">https://practicum.yandex.ru/android-developer/?from=profile_overview</string>
    <string name="url_to_the_offer" translatable="false">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="support_email" translatable="false">akulov_l@mail.ru</string>
    <string name="title_to_support_message">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_to_support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="toast_no_email_app">На устройстве не найдено приложение для отправки e-mail</string>
    <string name="connection_error">Проблемы со связью \n\n Загрузка не удалась. Проверьте \n подключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="update">Обновить</string>
    <string name="history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_favorite_tracks">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали \n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="title">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="add_to_palylist">Добавить в плейлист</string>
    <string name="permission_to_select_playlist_cover">Разрешение необходимо для выбора обложки плейлиста</string>
    <string name="finish_creating_the_playlist">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_has_been_created">Плейлист %s создан</string>
    <string name="track_has_already_been_added_to_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="no_tracks">Нет треков</string>
    <string name="wanna_delete_track">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="playlist_share_empty">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="wanna_delete_playlist">Хотите удалить плейлист %s?</string>

    <plurals name="track_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="track_duration">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>
