<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/OtherScreensBackground"
    android:id="@+id/createPlaylistFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/header_panel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/panel_header_height"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_button"
        style="@style/HeaderPanelElementsColor"
        android:layout_width="@dimen/back_butt_layout_width"
        android:layout_height="@dimen/back_butt_layout_width"
        android:layout_marginStart="@dimen/margin_4dp"
        android:layout_marginTop="@dimen/margin_4dp"
        app:layout_constraintStart_toStartOf="@id/header_panel"
        app:layout_constraintTop_toTopOf="@id/header_panel"
        app:srcCompat="@drawable/ic_arrow_back_24" />

    <TextView
        style="@style/HeaderPanelElementsColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/new_playlist"
        android:textFontWeight="500"
        android:textSize="@dimen/text_size_main"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="@id/header_panel" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/ic_size_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/ic_size_24" />

    <FrameLayout
        android:id="@+id/add_photo"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/rounded_rectangle"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/header_panel"
        android:clickable="true">

        <ImageView
            android:id="@+id/add_photo_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_add_photo_100" />

        <ImageView
            android:id="@+id/playlist_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

    </FrameLayout>

    <EditText
        android:id="@+id/title_edit_text"
        style="@style/CreatePlaylistEditText"
        android:layout_marginTop="@dimen/height_32"
        android:hint="@string/title"
        app:layout_constraintTop_toBottomOf="@id/add_photo" />

    <EditText
        android:id="@+id/description_edit_text"
        style="@style/CreatePlaylistEditText"
        android:layout_marginTop="@dimen/margin_16"
        android:hint="@string/description"
        app:layout_constraintTop_toBottomOf="@id/title_edit_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ic_size_44"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="@dimen/height_32"
        android:background="@drawable/button_selector"
        android:fontFamily="@font/ys_display_medium"
        android:letterSpacing="0"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="@dimen/text_size_settings_point"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
