<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MediaLibraryActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/panel_header_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:text="@string/app_name"
                android:fontFamily="@font/ys_display_medium"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_main" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="@dimen/indentation_from_header_panel"
            android:layout_marginBottom="28dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/search_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:foreground="?attr/selectableItemBackground"
                android:layout_marginBottom="16dp"

                android:fontFamily="@font/ys_display_medium"
                android:text="@string/search"
                android:textColor="@color/black_button_text"
                android:textAllCaps="false"
                android:letterSpacing="0"
                android:textSize="@dimen/text_size_main"

                app:cornerRadius="@dimen/button_radius"
                app:icon="@drawable/ic_search_24"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/icon_padding"
                app:iconTint="@color/black_button_text" />

            <Button
                android:id="@+id/media_library_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:foreground="?attr/selectableItemBackground"
                android:layout_marginBottom="16dp"

                android:fontFamily="@font/ys_display_medium"
                android:text="@string/media_library"
                android:textColor="@color/black_button_text"
                android:textAllCaps="false"
                android:letterSpacing="0"
                android:textSize="@dimen/text_size_main"

                app:cornerRadius="@dimen/button_radius"
                app:icon="@drawable/ic_library_24"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/icon_padding"
                app:iconTint="@color/black_button_text" />

            <Button
                android:id="@+id/settings_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:foreground="?attr/selectableItemBackground"

                android:fontFamily="@font/ys_display_medium"
                android:text="@string/settings"
                android:textColor="@color/black_button_text"
                android:textAllCaps="false"
                android:letterSpacing="0"
                android:textSize="@dimen/text_size_main"

                app:cornerRadius="@dimen/button_radius"
                app:icon="@drawable/ic_settings_24"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/icon_padding"
                app:iconTint="@color/black_button_text" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
