<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".media_library.ui.activity.MediaLibraryActivity">
    <LinearLayout
        style="@style/OtherScreensBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/panel_header_height"
        android:orientation="vertical">

        <LinearLayout

            style="@style/OtherScreensBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/header_margin_vertical_and_start"
            android:layout_marginStart="@dimen/header_margin_vertical_and_start"
            android:layout_marginEnd="@dimen/header_margin_end"
            android:orientation="horizontal">

            <FrameLayout

                android:layout_width="@dimen/back_butt_layout_width"
                android:layout_height="match_parent">

                <ImageView

                    style="@style/HeaderPanelElementsColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_arrow_back_24" />

                <Button

                    android:id="@+id/back_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:foreground="?attr/selectableItemBackground" />

            </FrameLayout>

            <FrameLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView

                    style="@style/HeaderPanelElementsColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/head_text_margin_start_and_bot"
                    android:layout_marginTop="@dimen/head_text_margin_top"
                    android:layout_marginBottom="@dimen/head_text_margin_start_and_bot"
                    android:fontFamily="@font/ys_display_medium"
                    android:text="@string/media_library"
                    android:textFontWeight="500"
                    android:textSize="@dimen/text_size_main" />

            </FrameLayout>

        </LinearLayout>

    </FrameLayout>

    <com.google.android.material.tabs.TabLayout
        style="@style/TabLayout"
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/back_butt_layout_width"
        app:tabTextAppearance="@style/TabItem">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_tracks" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlists" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
