<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MediaLibraryActivity">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <FrameLayout
                android:layout_width="56dp"
                android:layout_height="56dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/vector_back" />

                <Button
                    android:id="@+id/back_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:foreground="?attr/selectableItemBackground" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="14dp"
                android:text="@string/settings"
                android:textColor="@color/black_button_text"
                android:textSize="@dimen/text_size_main" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginTop="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginTop="21dp"
                android:layout_marginBottom="21dp"
                android:text="@string/dark_theme"
                android:textColor="@color/black_button_text"
                android:textSize="@dimen/text_size_settings" />

            <Switch
                android:layout_width="56dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="11dp"
                android:checked="true" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginTop="21dp"
                android:layout_marginBottom="21dp"
                android:text="@string/share"
                android:textColor="@color/black_button_text"
                android:textSize="@dimen/text_size_settings" />

            <FrameLayout
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="12dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/vector_share" />

            </FrameLayout>

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginTop="21dp"
                android:layout_marginBottom="21dp"
                android:text="@string/write_support"
                android:textColor="@color/black_button_text"
                android:textSize="@dimen/text_size_settings" />

            <FrameLayout
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="12dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/vector_support" />

            </FrameLayout>

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginTop="21dp"
                android:layout_marginBottom="21dp"
                android:text="@string/user_agreement"
                android:textColor="@color/black_button_text"
                android:textSize="@dimen/text_size_settings" />

            <FrameLayout
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="12dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/vector_arrow_forward" />

            </FrameLayout>

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
