<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    style="@style/OtherScreensBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/header_panel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/panel_header_height"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/back_button"
            style="@style/HeaderPanelElementsColor"
            android:layout_width="@dimen/back_butt_layout_width"
            android:layout_height="@dimen/back_butt_layout_width"
            android:layout_marginStart="@dimen/margin_4dp"
            android:layout_marginTop="@dimen/margin_4dp"
            app:layout_constraintStart_toStartOf="@id/header_panel"
            app:layout_constraintTop_toTopOf="@id/header_panel"
            app:srcCompat="@drawable/ic_arrow_back_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/ic_size_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/ic_size_24" />

        <ImageView
            android:id="@+id/track_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_placeholder_312"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/header_panel" />

        <TextView
            android:id="@+id/track_name"
            style="@style/PlayerTrackNameAndArtistName"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/track_cover" />

        <TextView
            android:id="@+id/artist_name"
            style="@style/PlayerTrackNameAndArtistName"
            android:layout_marginTop="12dp"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/track_name" />

        <ImageButton
            android:id="@+id/play_stop_btn"
            style="@style/HeaderPanelElementsColor"
            android:layout_width="@dimen/ic_size_100"
            android:layout_height="@dimen/ic_size_100"
            android:layout_marginTop="@dimen/margin_30"
            android:background="@drawable/button_ripple_oval"
            android:src="@drawable/ic_play_btn_100"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/artist_name" />

        <ImageButton
            android:id="@+id/add_to_playlist"
            style="@style/AddToPlaylistAndAddToFavorite"
            android:background="@drawable/button_ripple_oval"
            android:src="@drawable/ic_add_to_playlist_51"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="@id/play_stop_btn" />

        <ImageButton
            android:id="@+id/add_to_favorite"
            style="@style/AddToPlaylistAndAddToFavorite"
            android:background="@drawable/button_ripple_oval"
            android:src="@drawable/ic_add_to_favorite_51"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toTopOf="@id/play_stop_btn" />

        <TextView
            android:id="@+id/time_below_play_btn"
            style="@style/HeaderPanelElementsColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4dp"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/play_stop_btn" />

        <LinearLayout
            android:id="@+id/linlay_duration"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_32"
            android:layout_marginTop="@dimen/margin_30"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time_below_play_btn">

            <TextView
                style="@style/TrackDescription"
                android:layout_marginStart="@dimen/margin_16"
                android:text="@string/duration"
                android:textColor="@color/grey" />

            <TextView
                android:id="@+id/track_time"
                style="@style/TrackDescription"
                android:layout_width="match_parent"
                android:layout_marginEnd="@dimen/margin_16"
                android:gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay_collection"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_32"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linlay_duration"
            app:layout_goneMarginTop="@dimen/margin_30">

            <TextView
                style="@style/TrackDescription"
                android:layout_marginStart="@dimen/margin_16"
                android:text="@string/album"
                android:textColor="@color/grey" />

            <TextView
                android:id="@+id/collection_name"
                style="@style/TrackDescription"
                android:layout_width="match_parent"
                android:layout_marginEnd="@dimen/margin_16"
                android:gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay_releaseDate"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_32"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linlay_collection">

            <TextView
                style="@style/TrackDescription"
                android:layout_marginStart="@dimen/margin_16"
                android:text="@string/year"
                android:textColor="@color/grey" />

            <TextView
                android:id="@+id/releaseDate"
                style="@style/TrackDescription"
                android:layout_width="match_parent"
                android:layout_marginEnd="@dimen/margin_16"
                android:gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay_genre"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_32"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linlay_releaseDate">

            <TextView
                style="@style/TrackDescription"
                android:layout_marginStart="@dimen/margin_16"
                android:text="@string/genre"
                android:textColor="@color/grey" />

            <TextView
                android:id="@+id/track_genre"
                style="@style/TrackDescription"
                android:layout_width="match_parent"
                android:layout_marginEnd="@dimen/margin_16"
                android:gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay_country"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_32"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linlay_genre">

            <TextView
                style="@style/TrackDescription"
                android:layout_marginStart="@dimen/margin_16"
                android:text="@string/country"
                android:textColor="@color/grey" />

            <TextView
                android:id="@+id/track_country"
                style="@style/TrackDescription"
                android:layout_width="match_parent"
                android:layout_marginEnd="@dimen/margin_16"
                android:gravity="end" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
